# conductor

./: .gitignore  README.md
server/: fsop.py  hll_initial_prompt.txt  server.py  test  test.cpp  validate_arguments.py
src/: CMakeLists.txt  analysis.cpp  api.cpp  commands.hpp  defs.hpp  interface.cpp  interpreter.cpp  json.cpp  json.hpp  lexer.cpp  parser.cpp  rex.cpp  rex.hpp  server.hpp  unix_socket_client.cpp  validate.cpp  validate.hpp
